# git-chat-assistant

./: Cargo.toml  README.md  example-config.json  manifest.toml  test-commit-workflow.sh  theater-chat-config.json
config/: commit-workflow-config.json  example-config.json  gpt4-config.json  minimal-config.json  theater-commit-config.json  theater-review-config.json
src/: bindings.rs  lib.rs
wit/: world.wit
